codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Inspecting project context
  └ files: shimmer.rs, status_indicator_widget.rs • search: for shimmer_spans
