codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• ⚙️ Ran command
  └ first_token_is_long_enou
  └ gh_to_wrap
  └ … +2 lines
