codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• ⚙️ Ran command
  └ echo
  └ this_is_a_very_long_sing
  └ … +3 lines
  └ error: first line on
    stderr
    error: second line on
    stderr
